Fix z-index error

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -2,7 +2,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   width: 100vw;
   height: 100vh;
-  z-index: 0;
+  z-index: 2;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
